# lmv

./: .travis.yml  CMakeLists.txt  README.md
include/: dArray.hpp  dcsr.hpp  dict.hpp  hArray.hpp  hcsr.hpp  hlmv.hpp  read_config.hpp  test.hpp
src/: dlmv.hpp  hcsr.hpp
tests/: CMakeLists.txt  _test_read_config.c  test_csr.cu  test_dArray.cu  test_dcsr.cu  test_dict.cpp  test_hArray.cpp  test_hcsr.cpp
